Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignNumObjIntObj.quorum
class Main
    action Main
        Integer i
        number num
        i:SetValue(5)
        num = cast(number, i)
        if num:GetValue() = 5.0
            output "passed"
        end
    end
end