Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumObjIntObj.quorum
class Main
    action Main
        Integer i
        Number num
        i:SetValue(5)
        num = cast(Number, i)
    end
end